[package]
name = "botel"
version = "0.1.0"
authors = ["uigctaw <uigctaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
botel_tokenizer = { path = "../botel_tokenizer" }
botel_parser = { path = "../botel_parser" }
